change in appearance
changes styles to match the theme,and changed some hyprland settings

--- a/.config/hypr/hyprland-default.conf
+++ b/.config/hypr/hyprland-default.conf
@@ -12,7 +12,7 @@ $menu = rofi -show drun
 
 # AUTOSTART
 exec-once = $terminal
-exec-once = waybar & hyprpaper 
+exec-once = waybar  
 
 
 # ENVIRONMENT VARIABLES
@@ -52,8 +52,8 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(88c0d0aa)
-    col.inactive_border = rgba(465264aa)
+    col.active_border = rgba(d08b57aa)
+    col.inactive_border = rgba(7699a3aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
