Added Swww for Wallpapers
swww looks for wallpapers in '~/Wallpapers' directory for choosing random wallpapers at startup and you can choose any wallpapers using +Shift+W which opens a rofi menu that lets you choose any wallpaper in the same above mentioned directory

--- a/.config/hypr/hyprland-default.conf
+++ b/.config/hypr/hyprland-default.conf
@@ -13,7 +13,8 @@ $menu = rofi -show drun
 # AUTOSTART
 exec-once = $terminal
 exec-once = waybar  
-
+exec-once = swww-daemon  
+exec-once = ~/.config/swww/choose_random_wallpaper.sh 
 
 # ENVIRONMENT VARIABLES
 
