--- a/.config/hypr/hyprland-keybinds.conf
+++ b/.config/hypr/hyprland-keybinds.conf
@@ -64,3 +64,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+
+
+
+
+bind = $mainMod SHIFT, W, exec, $HOME/.config/swww/choose_wallpaper.sh
