--- a/.config/hypr/hyprland-keybinds.conf
+++ b/.config/hypr/hyprland-keybinds.conf
@@ -8,6 +8,8 @@ bind = $mainMod, T, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
+#bind = $mainMod, O, exec, hyprlock
+bind = SUPER, O, exec, zsh -c 'source ~/.zshrc.env; exec hyprlock'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -40,8 +42,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+#bind = $mainMod, S, togglespecialworkspace, magic
+#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
