--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -198,7 +198,7 @@
 		},
 		"format": "{capacity}% {icon}",
 		"format-full": "{capacity}% {icon}",
-		"format-charging": "{capacity}% ",
+		"format-charging": "{capacity}% ⚡︎",
 		"format-plugged": "{capacity}% ",
 		"format-alt": "{time} {icon}",
 		"format-icons": ["", "", "", "", ""]
