fixed time in hyprlock
Showing Asia/Kolkata time instead of UTC

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -19,7 +19,7 @@ general {
 # Time
 label {
     monitor =
-    text = cmd[update:1000] echo "<span>$(date +"%I:%M")</span>"
+	text = cmd[update:1000] TZ=Asia/Kolkata sh -c 'echo "<span>$(date +%I:%M)</span>"'
     color = rgba(216, 222, 233, .7)
     font_size = 160
     font_family = steelfish outline regular
