Swaync for notifications
waybar button to open notification centre, starting swaync at the start of hyprland and notification & notification centre style

--- a/.config/hypr/hyprland-default.conf
+++ b/.config/hypr/hyprland-default.conf
@@ -15,6 +15,7 @@ exec-once = $terminal
 exec-once = waybar  
 exec-once = swww-daemon  
 exec-once = ~/.config/swww/choose_random_wallpaper.sh 
+exec-once = swaync
 
 # ENVIRONMENT VARIABLES
 
