Keybinds added for screenshots using hyprshot

--- a/.config/hypr/hyprland-keybinds.conf
+++ b/.config/hypr/hyprland-keybinds.conf
@@ -9,7 +9,9 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 #bind = $mainMod, O, exec, hyprlock
-bind = SUPER, O, exec, zsh -c 'source ~/.zshrc.env; exec hyprlock'
+bind = $mainMod, O, exec, zsh -c 'source ~/.zshrc.env; exec hyprlock'
+bind = $mainMod SHIFT,R, exec, hyprshot -m region --notif-timeout 1400 --freeze --output-folder ~/Screenshots
+bind = $mainMod SHIFT,F, exec, hyprshot -m output --notif-timeout 1400 --freeze --output-folder ~/Screenshots
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
