--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -225,12 +225,12 @@
 		"scroll-step": 5,
 		"format": "{icon} {volume}%",
 		"format-bluetooth": "{icon} {volume}% ",
-		"format-bluetooth-muted": " {icon}",
-		"format-muted": "",
+		"format-bluetooth-muted": "󰝟 {icon}",
+		"format-muted": "󰝟",
 		"format-icons": {
 			"headphone": "",
-			"hands-free": "",
-			"headset": "",
+			"hands-free": "󰋌",
+			"headset": "󰋎",
 			"phone": "",
 			"portable": "",
 			"car": "",
