--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -1,60 +1,66 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-  "ignore-gtk-theme": true,
+
   "positionX": "right",
   "positionY": "top",
-  "layer": "overlay",
-  "control-center-layer": "top",
-  "layer-shell": true,
+  "control-center-positionX": "none",
+  "control-center-positionY": "none",
+  "control-center-margin-top": 8,
+  "control-center-margin-bottom": 8,
+  "control-center-margin-right": 8,
+  "control-center-margin-left": 8,
+  "control-center-width": 500,
+  "control-center-height": -1,
+  "fit-to-screen": false,
   "layer-shell-cover-screen": true,
+
+  "layer-shell": true,
+  "layer": "overlay",
+  "control-center-layer": "overlay",
   "cssPriority": "user",
-  "control-center-margin-top": 7,
-  "control-center-margin-bottom": 0,
-  "control-center-margin-right": 7,
-  "control-center-margin-left": 0,
-  "notification-2fa-action": true,
-  "notification-inline-replies": false,
   "notification-body-image-height": 100,
-  "notification-body-image-width": 500,
+  "notification-body-image-width": 200,
+  "notification-inline-replies": true,
   "timeout": 10,
   "timeout-low": 5,
   "timeout-critical": 0,
-  "fit-to-screen": false,
-  "relative-timestamps": true,
-  "control-center-width": 350,
-  "control-center-height": 800,
-  "notification-window-width": 350,
+  "notification-window-width": 500,
   "keyboard-shortcuts": true,
-  "notification-grouping": true,
-  "image-visibility": "when-available",
+  "image-visibility": "always",
   "transition-time": 200,
-  "hide-on-clear": false,
+  "hide-on-clear": true,
   "hide-on-action": true,
-  "text-empty": "No Notifications",
   "script-fail-notify": true,
+
   "widgets": [
-    "mpris",
+    "inhibitors",
     "dnd",
-    "title",
+    "mpris",
     "notifications"
   ],
   "widget-config": {
     "notifications": {
-      "vexpand": true
+      "vexpand": false
+    },
+    "inhibitors": {
+      "text": "Inhibitors",
+      "button-text": "Clear All",
+      "clear-all-button": true
     },
     "title": {
       "text": "Notifications",
-      "clear-all-button": true,
+      "clear-all-button": false,
       "button-text": "Clear All"
     },
     "dnd": {
-      "text": ""
+      "text": "Do Not Disturb"
+    },
+    "label": {
+      "max-lines": 5,
+      "text": "Label Text"
     },
     "mpris": {
-      "blacklist": [],
-      "autohide": false,
-      "show-album-art": "always",
-      "loop-carousel": false
+      "autohide": true
     }
   }
 }
